--- a/ClubLaFoulee/Web.config
+++ b/ClubLaFoulee/Web.config
@@ -24,6 +24,7 @@
     <add key="SportExpertEmail" value="eric.dugal@hotmail.com" />
     <add key="SportExpertEmailSubject" value="Club La Foulée - Nouvelles inscriptions" />
     <add key="ExceptionEmail" value="eric.dugal@hotmail.com" />
+    <add key="Year" value="2019"/>
   </appSettings>
   <system.web>
     <customErrors mode="Off" />
